expanded new chapter